am adaugat dashboard

--- a/urbanwastemanagement/AngularDemoArcGIS-main/package.json
+++ b/urbanwastemanagement/AngularDemoArcGIS-main/package.json
@@ -24,9 +24,11 @@
         "@angular/platform-browser-dynamic": "^14.0.0",
         "@angular/router": "^14.0.0",
         "@arcgis/core": "~4.28.0",
+        "chart.js": "^3.9.1",
         "esri-loader": "^3.3.0",
         "firebase": "^9.0.0",
         "minimist": "^1.2.5",
+        "ng2-charts": "^4.0.0",
         "papaparse": "^5.4.1",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
